# Monte-Carlo-AI-Hex-Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run-tests.yml
include/algorithms/: DepthFirstSearch.h  PathAlgorithm.h
include/common/: AppFunctions.h  Graph.h
include/enums/: CompiledOS.h  PlayerToken.h  PlayingSide.h
include/game/: Game.h  GameSettings.h  HexBoard.h  HexGame.h
include/player/: HumanPlayer.h  MonteCarloAIPlayer.h  Player.h
include/utils/: GlobalParameters.h
src/: main.cpp
src/algortihms/: DepthFirstSearch.tpp
src/common/: AppFunctions.cpp  GlobalParameters.cpp  Graph.tpp
src/game/: GameSettings.cpp  HexBoard.cpp  HexGame.cpp
src/player/: HumanPlayer.cpp  MonteCarloAIPlayer.cpp
tests/common/: graph_tests.cpp
